--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/styled-engine": "^5.12.0",
     "@reduxjs/toolkit": "^1.9.3",
+    "@tanstack/react-query": "^4.29.1",
+    "@types/chart.js": "^2.9.37",
+    "@types/leaflet": "^1.9.3",
+    "chart.js": "^4.2.1",
     "cra-template-typescript": "1.2.0",
+    "leaflet": "^1.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
@@ -44,7 +49,9 @@
   },
   "devDependencies": {
     "@types/react": "^18.0.35",
+    "@types/react-chartjs-2": "^2.5.7",
     "@types/react-dom": "^18.0.11",
+    "@types/react-leaflet": "^3.0.0",
     "@types/react-query": "^1.2.9",
     "@types/react-redux": "^7.1.25",
     "@types/react-router-dom": "^5.3.3",
